tests/negative/parallel_for_capture_assign.far
fun main() -> i64 {
  n = 0
  parallel for i in 0..<8 {
    n = n + 1
  }
  return n
}
